# swot-ml

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  batch_yml_mod.sh  ensemble_train.sh  flake.nix  gpu_train.sh  lstm.py  output.txt  packages.txt  pyproject.toml  rsync_unity.sh  run.sh  run_array.sh  run_batch.sh  run_dir.sh  run_ensemble.sh  run_grid.sh  run_grid_idx.sh  run_inference_chunks.sh  run_smac_opt.sh  unity_train.sh
data/: psi_model.ipynb  sag_daily.parquet  synthetic_daily.parquet
docs/: index.rst
docs/source/: conf.py  index.rst
notebooks/: CompareResults.ipynb  CompareResults_multitarget.ipynb  Hybrid.ipynb  HybridModel.ipynb  MapAnimation.ipynb  MissouriPredictions.ipynb  PyTorch_dataloader_test.ipynb  Sag_TAPTLSTM.ipynb  TAPLSTM_synthetic_test.ipynb  TAPTLSTM.ipynb  Test_GPU.ipynb  Test_model.ipynb  Transformer.ipynb  Transformer_Sag.ipynb  Transformer_synthetic_test.ipynb  WQT.ipynb  feature_importance.ipynb  generate_site_list.ipynb  grid_search.ipynb  h_test.ipynb  inspect_steps.ipynb  integrated_gradients.ipynb  run_graph_model.ipynb  run_model.ipynb  scratch.ipynb
notebooks/CONUS/: map_results.ipynb
notebooks/SWOT_Q/: CompareResults.ipynb  feature_importance.ipynb  test_usgs.ipynb
notebooks/WBMsed/: read_nc_files.ipynb
notebooks/demo/: 0_intro_model.ipynb  1_custom_models.ipynb  2_run_swot_ml.ipynb  3_sbatch_training.ipynb
notebooks/distributed/: compare_models.ipynb  integrated_gradients.ipynb  plot_model.ipynb  plot_spatial_weights.ipynb  plot_weight_movie.ipynb  quick_compare_models.ipynb  run_model.ipynb  test_model.ipynb
notebooks/multigraph_manual/: add_assimilator.ipynb  plot_model.ipynb  quick_compare.ipynb  run_model.ipynb
notebooks/reservoirs/: cached_dataset.ipynb  eval_model.ipynb  plot_model.ipynb  plot_train_test.ipynb  quick_compare_models.ipynb  run_model.ipynb  spq_quick_compare_models.ipynb  test_model.ipynb
runs/: config.yml  example_config.yml
runs/_examples/: basic_train.yml  bayesian_search.yml  finetune.yml  grid_search.yml  pydantic_config.yml  tiny_ohio.yml
runs/_slurm_out/: 22768423.out
runs/gpu_direct_train/: config.yml
sbatch/: run.sh  run_dir.sh  run_grid_idx.sh
src/: HybridModel.ipynb  PyTorch_dataloader_test.ipynb  Sag_EAMTLSTM.ipynb  Sag_Gated_LSTM.ipynb  Sag_MTLSTM.ipynb  Sag_TAPTLSTM.ipynb  TAPLSTM_synthetic_test.ipynb  TAPTLSTM.ipynb  backup_data.py  config.py  data.py  evaluate.py  generate_site_list.ipynb  gpu_train.sh  lstm.py  metrics.py  models.py  run.py  test_Gated_LSTM.ipynb  test_LSTM.ipynb  test_T_LSTM.ipynb  train.py  utils.py
src/config/: __init__.py  add_assimilator.py  config.py  finetune.py  model_args.py
src/data/: __init__.py  basindatalake.py  basindeltatable.py  basingraphdataloader.py  basingraphdataset.py  cached_basingraphdataloader.py  cached_basingraphdataset.py  hydrodata.py  hydroloader.py  lightweight_basingraphdataloader.py  mcfli_dataset.py  utils.py  (+5 more)
(+117 files in other folders)
